# QT_file_manager

./: README.md
File_Manager/: CMakeLists.txt  about.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
